# stm32-eth

./: .gdbinit  .gitignore  Cargo.toml  Makefile  mesyparams.py  mesytest.py  seqgen.py  setparams.py
examples/: udp.rs
src/: lib.rs  setup.rs  smi.rs  smoltcp_phy.rs
