[package]
name = "stm32-eth"
description = "Rust Ethernet driver for the STM32F429 with applications"
authors = ["Georg Brandl <g.brandl@fz-juelich.de>"]
version = "0.1.0"
license = "Apache-2.0"

[dependencies]
log = "0.4.1"
aligned = "0.1.1"
panic-itm = "0.2"
cortex-m-rt = "0.5.0"
byteorder = { version = "1.2", default-features = false }
cortex-m = { version = "0.5", features = ["const-fn", "inline-asm"] }
arraydeque = { version = "0.4", default-features = false }
arrayvec = { version = "0.4", default-features = false }
btoi = { version = "0.3", default-features = false }
volatile-register = "0.2.0"
stm32f429 = { git = "https://github.com/birkenfeld/stm32f429.git", features = ["rt"] }
smoltcp = { git = "https://github.com/birkenfeld/smoltcp", default-features = false, features = ["proto-ipv4", "proto-dhcpv4", "socket-icmp", "socket-udp", "socket-tcp", "log", "verbose"] }

[profile.release]
debug = 2
lto = true
